--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <!-- Другие кодировки плохо поддерживаются или имеют дыры -->
     <meta charset="UTF-8">
     <!-- Режим работы Internet Explorer -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Для мобилок -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
+    <!-- META-ТЕГИ ДЛЯ ПОИСКОВИКОВ -->
+    <!-- <link rel="canonical" href=""> -->
+    <meta name="description" content="Web developer." />
+    <meta name="keywords" content="web developer react front-end frontend" />
+    <meta name="robots" content="index, follow" />
 
     <!-- FONTs -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,15 +21,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-
-    <!-- META-ТЕГИ ДЛЯ ПОИСКОВИКОВ -->
-    <meta name="description" content="Personal" />
-    <meta name="keywords" content="Personal" />
-    <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, notranslate, noimageindex" />
-
     <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#00a300">
+    <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#191A19">
+    <!-- <meta name="theme-color" media="(prefers-color-scheme: light)" content="#D8E9A8" /> -->
+    <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#191A19" /> -->
 
+    <!-- OPEN GRAPH-->
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dmitriy Demidov | Front-End Developer" />
+    <meta property="og:description" content="Web developer." />
+    <meta property="og:url" content="https://github.com/demid088" />
+    <meta property="og:site_name" content="Dmitriy Demidov | Front-End Developer" />
+    <meta property="article:publisher" content="andrewborstein.com" />
+    <!-- <meta property="og:image" content="" /> -->
 
+    <!-- Apple Web App Meta -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+    <!-- Document Title -->
     <title>Demidov</title>
   </head>
   <body>
