[edit] - twitter card

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,13 @@
     <meta property="article:publisher" content="andrewborstein.com" />
     <!-- <meta property="og:image" content="" /> -->
 
+    <!-- Twitter Card -->
+    <!-- <meta name="twitter:card" content="summary" /> -->
+    <!-- <meta name="twitter:site" content="@" /> -->
+    <!-- <meta name="twitter:title" content="Dmitriy Demidov | Front-End Developer" /> -->
+    <!-- <meta name="twitter:description" content="Web developer." /> -->
+    <!-- <meta name="twitter:url" content="" /> -->
+
     <!-- Apple Web App Meta -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
