[edit] - ChkList Performance

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <meta name="keywords" content="web developer react front-end frontend" />
     <meta name="robots" content="index, follow" />
 
+    <!-- Performance -->
+    <link rel="dns-prefetch" href="https://github.com">
+
     <!-- FONTs -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
