[edit] - after first deploy

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <!-- META-ТЕГИ ДЛЯ ПОИСКОВИКОВ -->
-    <!-- <link rel="canonical" href=""> -->
+    <link rel="canonical" href="https://demid088.github.io/Personal/">
     <meta name="description" content="Web developer." />
     <meta name="keywords" content="web developer react front-end frontend" />
     <meta name="robots" content="index, follow" />
@@ -43,7 +43,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Dmitriy Demidov | Front-End Developer" />
     <meta property="og:description" content="Web developer." />
-    <meta property="og:url" content="https://github.com/demid088" />
+    <meta property="og:url" content="https://demid088.github.io/Personal/" />
     <meta property="og:site_name" content="Dmitriy Demidov | Front-End Developer" />
     <!-- <meta property="og:image" content="" /> -->
 
