[add] - og:image

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <meta property="og:description" content="Web developer." />
     <meta property="og:url" content="https://demid088.github.io/Personal/" />
     <meta property="og:site_name" content="Dmitriy Demidov | Front-End Developer" />
-    <!-- <meta property="og:image" content="" /> -->
+    <meta property="og:image" content="/favicon/android-chrome-512x512.png" />
 
     <!-- Twitter Card -->
     <!-- <meta name="twitter:card" content="summary" /> -->
