--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,14 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- FAVICON -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Personal/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Personal/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Personal/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/Personal/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/Personal/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/Personal/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#00a300">
-    <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="/Personal/favicon/browserconfig.xml">
     <meta name="theme-color" content="#191A19">
     <!-- <meta name="theme-color" media="(prefers-color-scheme: light)" content="#D8E9A8" /> -->
     <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#191A19" /> -->
@@ -45,7 +45,7 @@
     <meta property="og:description" content="Web developer." />
     <meta property="og:url" content="https://demid088.github.io/Personal/" />
     <meta property="og:site_name" content="Dmitriy Demidov | Front-End Developer" />
-    <meta property="og:image" content="/favicon/android-chrome-512x512.png" />
+    <meta property="og:image" content="/Personal/favicon/android-chrome-512x512.png" />
 
     <!-- Twitter Card -->
     <!-- <meta name="twitter:card" content="summary" /> -->
