[del] - Trailing slash

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 
     <!-- META-ТЕГИ ДЛЯ ПОИСКОВИКОВ -->
     <link rel="canonical" href="https://demid088.github.io/Personal/">
-    <meta name="description" content="Web developer." />
-    <meta name="keywords" content="web developer react front-end frontend" />
-    <meta name="robots" content="index, follow" />
+    <meta name="description" content="Web developer.">
+    <meta name="keywords" content="web developer react front-end frontend">
+    <meta name="robots" content="index, follow">
 
     <!-- Performance -->
     <link rel="dns-prefetch" href="https://github.com">
@@ -35,24 +35,24 @@
     <meta name="msapplication-TileColor" content="#00a300">
     <meta name="msapplication-config" content="/Personal/favicon/browserconfig.xml">
     <meta name="theme-color" content="#191A19">
-    <!-- <meta name="theme-color" media="(prefers-color-scheme: light)" content="#D8E9A8" /> -->
-    <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#191A19" /> -->
+    <!-- <meta name="theme-color" media="(prefers-color-scheme: light)" content="#D8E9A8"> -->
+    <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#191A19"> -->
 
     <!-- OPEN GRAPH-->
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Dmitriy Demidov | Front-End Developer" />
-    <meta property="og:description" content="Web developer." />
-    <meta property="og:url" content="https://demid088.github.io/Personal/" />
-    <meta property="og:site_name" content="Dmitriy Demidov | Front-End Developer" />
-    <meta property="og:image" content="/Personal/favicon/android-chrome-512x512.png" />
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Dmitriy Demidov | Front-End Developer">
+    <meta property="og:description" content="Web developer.">
+    <meta property="og:url" content="https://demid088.github.io/Personal/">
+    <meta property="og:site_name" content="Dmitriy Demidov | Front-End Developer">
+    <meta property="og:image" content="/Personal/favicon/android-chrome-512x512.png">
 
     <!-- Twitter Card -->
-    <!-- <meta name="twitter:card" content="summary" /> -->
-    <!-- <meta name="twitter:site" content="@" /> -->
-    <!-- <meta name="twitter:title" content="Dmitriy Demidov | Front-End Developer" /> -->
-    <!-- <meta name="twitter:description" content="Web developer." /> -->
-    <!-- <meta name="twitter:url" content="" /> -->
+    <!-- <meta name="twitter:card" content="summary"> -->
+    <!-- <meta name="twitter:site" content="@"> -->
+    <!-- <meta name="twitter:title" content="Dmitriy Demidov | Front-End Developer"> -->
+    <!-- <meta name="twitter:description" content="Web developer."> -->
+    <!-- <meta name="twitter:url" content=""> -->
 
     <!-- Apple Web App Meta -->
     <meta name="apple-mobile-web-app-capable" content="yes">
