[edit] - html no script

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 
     <!-- No Scripts -->
     <noscript>
-      <link rel="stylesheet" href="noscript.css">
+      <link rel="stylesheet" href="/Personal/noscript.css">
     </noscript>
 
     <!-- Document Title -->
