[add] - Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,17 @@
   <head>
     <!-- Другие кодировки плохо поддерживаются или имеют дыры -->
     <meta charset="UTF-8">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0WJNRH51GN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-0WJNRH51GN');
+    </script>
+    
     <!-- Режим работы Internet Explorer -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Для мобилок -->
